postgres_store_fix

--- a/config.example.env
+++ b/config.example.env
@@ -1,5 +1,15 @@
+# -----------------------------------------------------------------------------
 # Meta Marketing API credentials
+# -----------------------------------------------------------------------------
+
+# Default token source (local dev): provide token directly
 META_ACCESS_TOKEN=
+
+# Alternative token source (Railway / prod): store tokens in Postgres
+# Set to "db" to load token from DATABASE_URL.graph_api_tokens
+META_TOKEN_SOURCE=
+
+# Ad account id can be either "act_123..." or just "123..."
 META_AD_ACCOUNT_ID=
 
 # Optional
@@ -7,12 +17,59 @@ META_API_VERSION=v21.0
 META_APP_ID=
 META_APP_SECRET=
 
+# -----------------------------------------------------------------------------
 # Service configuration
+# -----------------------------------------------------------------------------
+
 # Where to persist idempotency in SQLite (choose a durable path in production)
 IDEMPOTENCY_DB_PATH=.meta_idempotency.db
+
+# Store idempotency in Postgres instead of SQLite (recommended for Railway long-term)
+# Requires DATABASE_URL
+IDEMPOTENCY_STORE_SOURCE=
+
+# Where to persist the schema v2 batching queue (SQLite)
+QUEUE_DB_PATH=.queue_state.db
+
+# Store the schema v2 batching queue in Postgres instead of SQLite (recommended for Railway long-term)
+# Requires DATABASE_URL
+QUEUE_STORE_SOURCE=
 
 # If set, /run requires header: X-API-Key: <SERVICE_API_KEY>
 SERVICE_API_KEY=
 
 # Optional port (used by some platforms)
 PORT=8080
+
+# -----------------------------------------------------------------------------
+# Campaign routing (schema v2)
+# -----------------------------------------------------------------------------
+
+# Campaign routing source:
+#   - empty/"": resolve by name (and auto-create if missing)
+#   - "db": read campaign ids from DATABASE_URL.product_campaign_routes_v2
+CAMPAIGN_ROUTE_SOURCE=
+
+# Override campaign variant labels (used in campaign naming).
+# Defaults are:
+#   green: ["TESTING","GRAFIK TESTING"]
+#   lila:  ["TESTING","GRAFIK TESTING"]
+#   rosa:  ["TESTING"]
+#
+# Example:
+# PRODUCT_CAMPAIGN_VARIANTS='{"green":["TESTING","GRAFIK TESTING"],"lila":["TESTING","GRAFIK TESTING"],"rosa":["TESTING"]}'
+PRODUCT_CAMPAIGN_VARIANTS=
+
+# Legacy single-campaign routing (schema v1). Optional.
+# Example:
+# PRODUCT_CAMPAIGN_NAMES='{"green":"GREEN | Main Campaign","lila":"LILA | Main Campaign","rosa":"ROSA | Main Campaign"}'
+PRODUCT_CAMPAIGN_NAMES=
+
+# -----------------------------------------------------------------------------
+# Postgres (Railway)
+# -----------------------------------------------------------------------------
+
+# Used when:
+#  - META_TOKEN_SOURCE=db (token in graph_api_tokens)
+#  - CAMPAIGN_ROUTE_SOURCE=db (campaign ids in product_campaign_routes_v2)
+DATABASE_URL=
