queue update with delay logic

--- a/config.example.env
+++ b/config.example.env
@@ -73,3 +73,20 @@ PRODUCT_CAMPAIGN_NAMES=
 #  - META_TOKEN_SOURCE=db (token in graph_api_tokens)
 #  - CAMPAIGN_ROUTE_SOURCE=db (campaign ids in product_campaign_routes_v2)
 DATABASE_URL=
+
+# ----------------------------------------------------------------------------
+# Schema v2 batching policy
+# ----------------------------------------------------------------------------
+# Default: target 4 unique videos per AdSet, but after fallback delay allow 3.
+BATCH_TARGET=4
+BATCH_MIN=3
+BATCH_FALLBACK_AFTER_S=60
+
+# ----------------------------------------------------------------------------
+# Worker
+# ----------------------------------------------------------------------------
+# How often the worker checks the queue groups.
+WORKER_POLL_SECONDS=10
+
+# If you're running a separate worker service, set this to false on the API service.
+ENABLE_IMMEDIATE_DRAIN=true
