--- a/config.example.env
+++ b/config.example.env
@@ -90,3 +90,8 @@ WORKER_POLL_SECONDS=10
 
 # If you're running a separate worker service, set this to false on the API service.
 ENABLE_IMMEDIATE_DRAIN=true
+
+# Best-effort rollback: if a batch fails midway, try to delete the partially
+# created objects (ads/adset/creatives) so you don't end up with half-filled
+# adsets.
+ROLLBACK_ON_FAILURE=true
